<resources>
    <string name="app_name">regi</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="year">Year</string>
    <string name="branch">Branch</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="continues">continues</string>
    <string name="logins">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="emails">EMAIL</string>
    <string name="passwords">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Continue">continue</string>
    <string name="registers">Register</string>
    <string name="mobile_number2">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_phone_number">Enter Phone number</string>
</resources>