<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    tools:context="com.enrollapp.regi.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="375dp"
        android:layout_height="350dp"
        app:cardBackgroundColor="#CBFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892">

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="330dp"
            android:layout_height="78dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="195dp"
            android:text="@string/logins"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="280dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="#FFFDFD"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/white"
            android:ems="10"
            android:hint="@string/emails"
            android:inputType="textEmailAddress"
            android:textColorHint="#5A5858" />

        <EditText
            android:id="@+id/editTextPassword2"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/white"
            android:ems="10"
            android:hint="@string/passwords"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="280dp"
            android:text="@string/register"
            android:textColor="#0d08f5"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="300dp"
            android:text="@string/forgot_password"
            android:textColor="#0d08f5"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="165dp"
            tools:ignore="MissingConstraints" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>