<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    tools:context="com.enrollapp.regi.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="373dp"
        android:layout_height="200dp"
        app:cardBackgroundColor="#BEFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/enter_phone_number"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="330dp"
            android:layout_height="65dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/white"
            android:ems="10"
            android:hint="@string/mobile_number2"
            android:inputType="phone"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="330dp"
            android:layout_height="65dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:text="@string/send_otp"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>